RESULTS/AutoSpec/raw_results/out-4o-oopsla/024_0014/024_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/024_0014/024_merged.c:28:5: error: unterminated comment
   28 |     /*@;
      |     ^
